# ANT-Library

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  configure  configure.ac
ANT_DLL/: Makefile  Makefile.am
ANT_LIB/: Makefile  Makefile.am
ANT_LIB/software/USB/device_handles/: usb_device_handle_linux.cpp
ANT_LIB/software/USB/devices/: usb_device_linux.cpp  usb_device_linux.hpp
DEMO_ANTFS/: demo_antfs.cpp  demo_antfs.h
DEMO_HRM/: demo_hrm.cpp
DEMO_LIB/: Makefile  Makefile.am
codeblocks/: ANT.cbp  ANT.layout  CMakeCache.txt  CppCheckResults.xml  Makefile  cmake_install.cmake
codeblocks/ANT_LIB/: Makefile  cmake_install.cmake
codeblocks/DEMO_ANTFS/: Makefile  cmake_install.cmake
codeblocks/DEMO_HRM/: Makefile  cmake_install.cmake
project/: demo_antfs.cbp  demo_antfs.depend  demo_antfs.layout  demo_dylib.cbp  demo_dylib.depend  demo_hrm.cbp  demo_hrm.depend  demo_static.cbp  demo_static.depend  libant_dylib.cbp  libant_dylib.depend  libant_static.cbp  libant_static.depend
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.ac
src/ANT_DLL/: ant.cpp  ant.h
src/ANT_LIB/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
src/ANT_LIB/common/: checksum.c  checksum.h  crc.c  crc.h
src/ANT_LIB/inc/: antdefines.h  antmessage.h  defines.h  types.h  version.h
src/ANT_LIB/software/ANTFS/: antfs_client_channel.cpp  antfs_client_channel.hpp  antfs_client_interface.hpp  antfs_directory.c  antfs_directory.h  antfs_host.cpp  antfs_host.hpp  antfs_host_channel.cpp  antfs_host_channel.hpp  antfs_host_interface.hpp  antfs_interface.h  antfsmessage.h  config.h
src/ANT_LIB/software/USB/: usb_device_list.hpp  usb_device_list_template.hpp  usb_standard_types.hpp
src/ANT_LIB/software/USB/device_handles/: usb_device_handle.hpp  usb_device_handle_iokit.cpp  usb_device_handle_iokit.hpp  usb_device_handle_linux.cpp  usb_device_handle_mac.cpp  usb_device_handle_si_iokit.cpp  usb_device_handle_si_iokit.hpp  usb_device_handle_vcp.cpp  usb_device_handle_vcp.hpp
src/ANT_LIB/software/USB/devices/: usb_device.cpp  usb_device.hpp  usb_device_iokit.cpp  usb_device_iokit.hpp  usb_device_linux.cpp  usb_device_linux.hpp  usb_device_vcp.cpp  usb_device_vcp.hpp
src/ANT_LIB/software/USB/iokit_driver/: iokit_device.cpp  iokit_device.hpp  iokit_device_handle.cpp  iokit_device_handle.hpp  iokit_device_list.cpp  iokit_device_list.hpp  iokit_interface.cpp  iokit_interface.hpp  iokit_transfer.cpp  iokit_transfer.hpp  iokit_types.hpp
src/ANT_LIB/software/serial/: dsi_framer.cpp  dsi_framer.hpp  dsi_framer_ant.cpp  dsi_framer_ant.hpp  dsi_framer_integrated_antfs_client.cpp  dsi_serial.cpp  dsi_serial.hpp  dsi_serial_callback.hpp  dsi_serial_generic.cpp  dsi_serial_generic.hpp  dsi_serial_iokit.cpp  dsi_serial_iokit.hpp  dsi_vcp_si.cpp  dsi_vcp_si.hpp
src/ANT_LIB/software/serial/device_management/: dsi_ant_device.cpp  dsi_ant_device.hpp  dsi_ant_message_processor.hpp  dsi_response_queue.hpp
src/ANT_LIB/software/system/: dsi_convert.c  dsi_convert.h  dsi_debug.cpp  dsi_debug.hpp  dsi_thread.h  dsi_thread_posix.c  dsi_thread_win32.c  dsi_timer.cpp  dsi_timer.hpp  dsi_ts_queue.hpp  macros.c  macros.h
src/DEMO_ANTFS/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  demo_antfs.cpp  demo_antfs.h  log4cxx.properties
src/DEMO_HRM/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  demo_hrm.cpp
