SUBDIRS=ANT_LIB ANT_DLL DEMO_LIB
LIB_SRCDIR=$(abs_top_srcdir)/ANT_LIB

INCLUDES=-I$(LIB_SRCDIR)/inc \
            -I$(LIB_SRCDIR)/common  \
            -I$(LIB_SRCDIR)/software/ANTFS \
            -I$(LIB_SRCDIR)/software/serial \
            -I$(LIB_SRCDIR)/software/serial/device_management \
            -I$(LIB_SRCDIR)/software/system \
            -I$(LIB_SRCDIR)/software/USB \
            -I$(LIB_SRCDIR)/software/USB/devices \
            -I$(LIB_SRCDIR)/software/USB/device_handles \
            -I$(LIB_SRCDIR)/software/USB/iokit_driver
            
       
export INCLUDES
